--- a/config/bspwm/picom/picom.conf
+++ b/config/bspwm/picom/picom.conf
@@ -2,12 +2,12 @@
 animations = true
 
 animation-for-transient-window = "fly-in"
-animation-for-open-window = "fly-in"
-animations-for-close-windows = "fly-out"
-animation-for-unmap-window = "slide-down"
+animation-for-open-window = "zoom"
+animations-for-close-windows = "zoom"
+animation-for-unmap-window = "zoom"
 
 animation-dampening = 20
-animation-clamping = false
+animation-clamping = true
 
 # Corners
 corner-radius = 10;
