--- a/config/bspwm/picom/picom_alternate.conf
+++ b/config/bspwm/picom/picom_alternate.conf
@@ -200,11 +200,15 @@ blur-kern = "3x3box";
 
 # Exclude conditions for background blur.
 # blur-background-exclude = []
-# blur-background-exclude = [
-#   "window_type = 'dock'",
-#   "window_type = 'desktop'",
-#   "_GTK_FRAME_EXTENTS@:c"
-# ];
+
+blur-background-exclude = [
+  "window_type = 'dock'",
+  "class_g = 'slop'",
+  "QTILE_INTERNAL:32c = 1",
+  #"window_type = 'desktop'",
+  "_GTK_FRAME_EXTENTS@:c"
+];
+
 
 
 #################################
@@ -435,7 +439,7 @@ log-level = "info";
 wintypes:
 {
   tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = true; };
-  dock = { shadow = true; clip-shadow-above = true; }
+  # dock = { shadow = true; clip-shadow-above = true; }
   dnd = { shadow = true; }
   popup_menu = { opacity = 0.95; }
   dropdown_menu = { opacity = 0.95; }
