add art support for eww music player

--- a/config/bspwm/polybar/minimal_bar/config.ini
+++ b/config/bspwm/polybar/minimal_bar/config.ini
@@ -11,12 +11,9 @@
 [bar/mainbar]
 width = 98%
 ; width = 100%
-height = 40
+height = 50
 radius = 0
 fixed-center = true
-
-border-size = 10
-border-color = ${colors.base}
 
 background = ${colors.base}
 foreground = ${colors.text}
@@ -38,10 +35,9 @@ font-7 = "JetBrainsMono Nerd Font:pixelsize=12;4"
 font-8 = "JetBrainsMono Nerd Font:pixelsize=20;5"
 
 ; MODULES SETUP
-modules-left = appmenu sep dot sep left1 player-title left2 sep dot sep left1 volume left2
-; modules-center = left1 spotify-artist spotify-track
-modules-center = left1 bspwm left2
-modules-right = right1 sep1 memory sep1 dot1 sep1 pacman-updates sep1 dot1 sep1 cpu sep1 right2 sep dot sep right1 date right2
+modules-left = appmenu
+modules-center = bspwm
+modules-right = date
 
 cursor-click = pointer
 cursor-scroll = pointer
@@ -61,15 +57,11 @@ offset-x = 1%
 ; label-separator = |
 
 [settings]
-include-file = ~/.config/bspwm/polybar/modules/modules.ini
-include-file=~/.config/bspwm/polybar/colors/decayce.ini
+include-file = ~/.config/bspwm/polybar/minimal_bar/modules/modules.ini
+include-file=~/.config/bspwm/polybar/minimal_bar/colors/mocha.ini
 screenchange-reload = true
 ;compositing-background = xor
 ;compositing-background = screen
 ;compositing-foreground = source
 ;compositing-border = over
 pseudo-transparency = false
-
-[global/wm]
-margin-bottom = 0
-margin-top = 0
