--- a/config/bspwm/polybar/modules/modules.ini
+++ b/config/bspwm/polybar/modules/modules.ini
@@ -150,11 +150,11 @@ content-font = 2
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 [module/appmenu]
 type = custom/text
-content-foreground = ${colors.red}
-content-background = ${colors.surface0}
-content = "異"
-content-font = 2
-click-left = exec $HOME/.config/bspwm/rofi/bin/launcher
+content-foreground = #1793D1
+content-background = ${colors.base}
+content = ""
+content-font = 9
+click-left = exec ~/.config/bspwm/polybar/scripts/launchMenu
 
 [module/term]
 type = custom/text
