--- a/config/conky/Regulus-Light/Regulus.conf
+++ b/config/conky/Regulus-Light/Regulus.conf
@@ -89,7 +89,7 @@ ${offset 165}${voffset 2}${font Abel:size=8}Downspeed : ${downspeed wlp9s0}
 ${offset 165}${voffset 0}${downspeedgraph wlp9s0 24,107 E917AA 1E90FF}
 ${offset 165}${voffset -3}${color}${font Abel:size=8}Upspeed : ${upspeed wlp9s0}
 ${offset 165}${voffset 0}${upspeedgraph wlp9s0 24,107 E917AA 1E90FF}
-${color}${alignr 13}${voffset 25}${font Abel:bold:size=11}${if_running playerctl}${playerctl status} :${else}No music played${endif}
-${color2}${alignr 13}${voffset 5}${font Dosis:bold:size=24}${playerctl metadata title}${font}
-${color}${alignr 13}${voffset 4}${if_running mpd}${font Feather:size=13} ${font Abel:size=12}${playerctl metadata artist}${else} ${endif}${font}
+${color}${alignr 13}${voffset 25}${font Abel:bold:size=11}${if_running playerctl}${execi 100 playerctl status}:${else}No music played${endif}
+${color2}${alignr 13}${voffset 5}${font Dosis:bold:size=24}${execi 100 playerctl metadata title}${font}
+${color}${alignr 13}${voffset 4}${if_running mpd}${font Feather:size=13} ${font Abel:size=12}${execi 100 playerctl metadata artist}${else} ${endif}${font}
 ]]
